--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <title>Jenil's Portfolio</title>
 </head>
 
-<body>
+<body oncontextmenu="return false">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
